add orientation fragment

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -22,5 +22,9 @@
             android:id="@+id/nav_geography"
             android:icon="@drawable/ic_menu_geography"
             android:title="@string/menu_geography" />
+        <item
+            android:id="@+id/nav_orientation"
+            android:icon="@drawable/ic_menu_orientation"
+            android:title="Orientation" />
     </group>
 </menu>
