implement viewmodel, change tick to handler approach, and display imu (#5)
* implement viewmodel and change tick to handler approach

* add error handling

* add orientation fragment

* pitch and roll display (uncalibrated)

* add imu temperature

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,6 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_main_drawer"
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
@@ -21,5 +22,9 @@
             android:id="@+id/nav_geography"
             android:icon="@drawable/ic_menu_geography"
             android:title="@string/menu_geography" />
+        <item
+            android:id="@+id/nav_orientation"
+            android:icon="@drawable/ic_menu_orientation"
+            android:title="Orientation" />
     </group>
 </menu>
